log
Thu 16 May 2024 09:10:55 PM UTC: 
 tests:  0|5
total_score: 0/70
187b9d0
Thu 16 May 2024 09:27:04 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:26: error: ‘j’ undeclared (first use in this function)
   57 |            if(n->sudo[i][j] == 0){
      |                          ^
sudoku.c:57:26: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
439f82a
Thu 16 May 2024 09:27:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4aba724
Thu 16 May 2024 09:28:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e897b20
Thu 16 May 2024 09:29:27 PM UTC: 
 sudoku.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
7c280e1
Thu 16 May 2024 09:29:42 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
71c2a59
